# transport_problem

./: .env_example  Dockerfile  Makefile  README.md  pyproject.toml
backend/: Dockerfile
backend/src/routes/: __init__.py  solve_problem.py
backend/src/schemas/: transport_schema.py
docker_compose/: app.yaml  backend.yaml  frontend.yaml
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml
frontend/src/: main.jsx
frontend/src/pages/: page.jsx  text.css
frontend/src/routing/: Router.jsx
src/: main.py
src/routes/: solve_problem.py
src/services/: transport_service.py
